# microxml

./: ANNOUNCEMENT  CHANGES  COPYING  Makefile.in  README  config.h.in  configure.in  microxml.list.in  microxml.pc.in  mxml-attr.c  mxml-entity.c  mxml-file.c  mxml-get.c  mxml-index.c  mxml-node.c  mxml-private.c  mxml-private.h  mxml-search.c  mxml-set.c  mxml-string.c
